syntax = "proto3";

package ananke;

option go_package = "ananke/api/proto";

import "google/protobuf/timestamp.proto";
import "core.proto";
import "ananke/object.proto";

service PreorderService {
  rpc InitiatePreorder(InitiatePreorderRequest) returns (PreorderResponse) {}
  rpc GetLatestCompletedOrPendingPreorder(GetLatestCompletedOrPendingPreorderRequest) returns (PreorderResponse) {}
  rpc ChangePreorderStatusByInvoiceId(ChangePreorderStatusByInvoiceIdRequest) returns (PreorderResponse) {}
}

message InitiatePreorderRequest {
  core.BaseRequest base = 1;
  int32 preorder_type_id = 2;
  string success_return_url = 3;
  string failure_return_url = 4;
}

message GetLatestCompletedOrPendingPreorderRequest {
  core.BaseRequest base = 1;
  int32 preorder_type_id = 2;
}

message ChangePreorderStatusByInvoiceIdRequest {
  core.BaseRequest base = 1;
  string invoice_id = 2;
  TransactionStatus transaction_status = 3;
}

message PreorderResponse {
  core.BaseResponse base = 1;
  Preorder preorder = 2;
}
